--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       content="initial-scale=1, maximum-scale=5, minimum-scale=1, width=device-width"
     />
 
-    <title>Beenow - агрегатор новин українського інтернету</title>
+    <title>Beenow</title>
     <base target="_blank" />
     <meta name="theme-color" content="#0057b7" />
     <meta name="msapplication-TileColor" content="#0057b7" />
@@ -20,7 +20,6 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://beenow.com.ua/" />
     <meta property="og:title" content="Beenow" />
     <meta
       property="og:description"
@@ -29,13 +28,12 @@
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://beenow.com.ua/" />
     <meta property="twitter:title" content="Beenow" />
     <meta property="twitter:image" content="" />
 
     <meta
       name="description"
-      content="Beenow - агрегатор новин українського інтернету"
+      content="Beenow"
     />
 
     <link rel="manifest" href="manifest.webmanifest" />
@@ -72,7 +70,7 @@
       rel="preload"
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"
     />
-  <script defer src="/js/vendor.c07873fc.js"></script><script defer src="/js/app.9365e9ab.js"></script><link href="/css/vendor.921a6ea1.css" rel="stylesheet"><link href="/css/app.46a89553.css" rel="stylesheet"><link rel="manifest" href="manifest.json"></link><meta name="theme-color" content="#0057b7"></meta><meta name="apple-mobile-web-app-capable" content="yes"></meta><meta name="apple-mobile-web-app-status-bar-style" content="default"></meta><meta name="apple-mobile-web-app-title" content="Beenow - агрегатор новин українського інтернету"></meta><link rel="apple-touch-icon" href="icons/apple-icon-120x120.png"></link><link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png"></link><link rel="apple-touch-icon" sizes="167x167" href="icons/apple-icon-167x167.png"></link><link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png"></link><link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#0057b7"></link><meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png"></meta><meta name="msapplication-TileColor" content="#000000"></meta></head>
+  <script defer src="/js/vendor.6de7b6df.js"></script><script defer src="/js/app.f9367254.js"></script><link href="/css/vendor.921a6ea1.css" rel="stylesheet"><link href="/css/app.46a89553.css" rel="stylesheet"><link rel="manifest" href="manifest.json"></link><meta name="theme-color" content="#0057b7"></meta><meta name="apple-mobile-web-app-capable" content="yes"></meta><meta name="apple-mobile-web-app-status-bar-style" content="default"></meta><meta name="apple-mobile-web-app-title" content="Beenow - агрегатор новин українського інтернету"></meta><link rel="apple-touch-icon" href="icons/apple-icon-120x120.png"></link><link rel="apple-touch-icon" sizes="152x152" href="icons/apple-icon-152x152.png"></link><link rel="apple-touch-icon" sizes="167x167" href="icons/apple-icon-167x167.png"></link><link rel="apple-touch-icon" sizes="180x180" href="icons/apple-icon-180x180.png"></link><link rel="mask-icon" href="icons/safari-pinned-tab.svg" color="#0057b7"></link><meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png"></meta><meta name="msapplication-TileColor" content="#000000"></meta></head>
   <body style="overflow: hidden">
     <noscript>
       <strong
